--- a/package.json
+++ b/package.json
@@ -3,22 +3,50 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --proxy-config proxy.conf.json",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~12.1.2",
+    "@angular/animations": "^12.1.5",
     "@angular/common": "~12.1.2",
     "@angular/compiler": "~12.1.2",
     "@angular/core": "~12.1.2",
     "@angular/forms": "~12.1.2",
+    "@angular/localize": "^12.1.4",
     "@angular/platform-browser": "~12.1.2",
     "@angular/platform-browser-dynamic": "~12.1.2",
     "@angular/router": "~12.1.2",
-    "rxjs": "~6.6.0",
+    "@apollo/client": "^3.4.4",
+    "@progress/kendo-angular-buttons": "^6.2.1",
+    "@progress/kendo-angular-common": "^2.0.1",
+    "@progress/kendo-angular-dateinputs": "^5.2.1",
+    "@progress/kendo-angular-dropdowns": "^5.3.0",
+    "@progress/kendo-angular-excel-export": "^4.0.1",
+    "@progress/kendo-angular-grid": "^5.3.1",
+    "@progress/kendo-angular-inputs": "^7.3.2",
+    "@progress/kendo-angular-intl": "^3.1.1",
+    "@progress/kendo-angular-l10n": "^3.0.2",
+    "@progress/kendo-angular-label": "^3.1.0",
+    "@progress/kendo-angular-pdf-export": "^3.0.1",
+    "@progress/kendo-angular-popup": "^4.0.1",
+    "@progress/kendo-angular-treeview": "^5.4.0",
+    "@progress/kendo-angular-upload": "^7.1.1",
+    "@progress/kendo-data-query": "^1.5.5",
+    "@progress/kendo-drawing": "^1.11.0",
+    "@progress/kendo-licensing": "^1.2.0",
+    "angular-animations": "^0.11.0",
+    "apollo-angular": "^2.6.0",
+    "apollo-angular-link-http": "^1.11.0",
+    "apollo-cache-inmemory": "^1.6.6",
+    "apollo-client": "^2.6.10",
+    "apollo-link": "^1.2.14",
+    "cors": "^2.8.5",
+    "graphql": "^15.5.1",
+    "graphql-tag": "^2.12.5",
+    "rxjs": "^6.6.7",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
   },
