--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
     "@angular/platform-browser": "~12.1.2",
     "@angular/platform-browser-dynamic": "~12.1.2",
     "@angular/router": "~12.1.2",
-    "@apollo/client": "^3.4.4",
+    "@apollo/client": "^3.3.21",
     "@progress/kendo-angular-buttons": "^6.2.1",
     "@progress/kendo-angular-common": "^2.0.1",
     "@progress/kendo-angular-dateinputs": "^5.2.1",
+    "@progress/kendo-angular-dialog": "^5.1.0",
     "@progress/kendo-angular-dropdowns": "^5.3.0",
     "@progress/kendo-angular-excel-export": "^4.0.1",
     "@progress/kendo-angular-grid": "^5.3.1",
@@ -30,6 +31,7 @@
     "@progress/kendo-angular-intl": "^3.1.1",
     "@progress/kendo-angular-l10n": "^3.0.2",
     "@progress/kendo-angular-label": "^3.1.0",
+    "@progress/kendo-angular-notification": "^3.0.1",
     "@progress/kendo-angular-pdf-export": "^3.0.1",
     "@progress/kendo-angular-popup": "^4.0.1",
     "@progress/kendo-angular-treeview": "^5.4.0",
@@ -48,6 +50,7 @@
     "graphql-scalars": "^1.10.0",
     "graphql-tag": "^2.12.5",
     "rxjs": "^6.6.7",
+    "socketcluster-client": "^16.0.4",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
   },
@@ -57,6 +60,7 @@
     "@angular/compiler-cli": "~12.1.2",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
+    "@types/socketcluster-client": "^15.1.5",
     "jasmine-core": "~3.8.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
