--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "apollo-link": "^1.2.14",
     "cors": "^2.8.5",
     "graphql": "^15.5.1",
+    "graphql-request": "^3.5.0",
     "graphql-scalars": "^1.10.0",
     "graphql-tag": "^2.12.5",
     "rxjs": "^6.6.7",
